# Cursor-CA-Orchestrator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  completion-mode-spec.md  discovery-notes-run-artifacts.md  discovery-notes-tui-exit.md  oclif.manifest.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
legacy-python/cursor_orch/: config.py  dashboard.py  planner.py  prompt_builder.py  repl.py  session.py  state.py  system_prompt.py
legacy-python/tests/: test_bootstrap.py  test_cli.py  test_config.py  test_orchestrator.py  test_packager.py  (+2 more)
scripts/: bootstrap.sh
src/: bootstrap.ts  cli.ts  commands.ts  dashboard.ts  env.ts  orchestrator-entry.ts  orchestrator.ts  packager.ts  planner.ts  prompt-builder.ts  repl.ts  session.ts  state.ts  system-prompt.ts  version.ts
tests/: commands-mcp.test.ts  config.test.ts  constraint-validator.test.ts  dashboard.test.ts  env-wizard.test.ts  failure-diagnostics.test.ts  github-consolidated-pr.test.ts  orchestration-isolation.test.ts  orchestrator-e2e.test.ts  orchestrator.test.ts  packager.test.ts  planner-prompt-inventory.test.ts  planner.test.ts  prompt-token-count.test.ts  refresh-command.test.ts  repl-picker-integration.test.ts  repo-interactive.test.ts  run-impl.test.ts  sdk-agent-client.test.ts  session.test.ts  slash-suggestions.test.ts  state.test.ts  system-prompt-strings.test.ts  test_bootstrap.py  test_cli.py  test_gist_client.py  test_planner.py  test_prompt_builder.py  test_repo_store.py  transcript.test.ts  tty-line-editor-gate.test.ts
(+79 files in other folders)
