[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-orch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
cursor-orch = "cursor_orch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_orch"]
